Refactor entities: Payment, Room, User